--- a/ea-contabilidad/ea-app/src/main/resources/styles/principal.css
+++ b/ea-contabilidad/ea-app/src/main/resources/styles/principal.css
@@ -44,3 +44,12 @@
 	-fx-border-color : orange;
 	-fx-border-width : 1;
 }
+
+.button{
+	-fx-background-color: white;
+	
+}
+.button:hover{
+	-fx-background-color: grey;
+	-fx-text-fill: white;
+}
