--- a/ea-contabilidad/ea-app/src/main/resources/view/config/servicios/ConfigService.fxml
+++ b/ea-contabilidad/ea-app/src/main/resources/view/config/servicios/ConfigService.fxml
@@ -1,18 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.collections.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.control.cell.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="642.0" prefWidth="578.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="co.com.japl.ea.app.beans.config.ConfigServiceBean">
+<BorderPane prefHeight="642.0" prefWidth="578.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.com.japl.ea.app.beans.config.ConfigServiceBean">
   <bottom>
-    <HBox fx:id="moveButtons" alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="578.0" BorderPane.alignment="CENTER"/>
+    <HBox fx:id="moveButtons" alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="578.0" BorderPane.alignment="CENTER" />
   </bottom>
   <center>
     <TabPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="357.0" prefWidth="450.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
@@ -34,15 +44,15 @@
                   <children>
                     <TableView fx:id="lstMarcadores" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onMouseClicked="#marcadorSelect" prefHeight="187.0" prefWidth="468.0" GridPane.columnIndex="0" GridPane.columnSpan="4" GridPane.halignment="CENTER" GridPane.rowIndex="3">
                       <columns>
-                      	<TableColumn minWidth="0.0" prefWidth="80.0" text="Orden" fx:id="orden" />
-                        <TableColumn maxWidth="1.7976931348623157E308" minWidth="0.0" prefWidth="426.0" text="Marcador" fx:id="colMarcador" />
-                        <TableColumn prefWidth="120.0" text="Entrada/Salida" fx:id="colInOut" />
+                      	<TableColumn fx:id="orden" minWidth="0.0" prefWidth="80.0" text="Orden" />
+                        <TableColumn fx:id="colMarcador" maxWidth="1.7976931348623157E308" minWidth="0.0" prefWidth="426.0" text="Marcador" />
+                        <TableColumn fx:id="colInOut" prefWidth="120.0" text="Entrada/Salida" />
                       </columns>
                       <GridPane.margin>
                         <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                       </GridPane.margin>
                     </TableView>
-                    <HBox fx:id="markButtons" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="21.0" prefWidth="479.0" GridPane.columnIndex="0" GridPane.columnSpan="4" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER"/>
+                    <HBox fx:id="markButtons" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="21.0" prefWidth="479.0" GridPane.columnIndex="0" GridPane.columnSpan="4" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER" />
                     <Label fx:id="totalMarcador" alignment="CENTER_RIGHT" contentDisplay="LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Total: 0" GridPane.columnIndex="3" GridPane.rowIndex="4">
                       <GridPane.margin>
                         <Insets right="25.0" />
@@ -79,6 +89,7 @@
                     <ColumnConstraints hgrow="SOMETIMES" maxWidth="270.0" minWidth="10.0" prefWidth="74.0" />
                     <ColumnConstraints hgrow="SOMETIMES" maxWidth="199.0" minWidth="10.0" prefWidth="99.0" />
                     <ColumnConstraints hgrow="SOMETIMES" maxWidth="277.0" minWidth="10.0" prefWidth="277.0" />
+                              <ColumnConstraints />
                   </columnConstraints>
                   <rowConstraints>
                     <RowConstraints maxHeight="96.0" minHeight="10.0" prefHeight="36.0" vgrow="SOMETIMES" />
@@ -129,12 +140,12 @@
                         </TableColumn>
                       </columns>
                     </TableView>
-                    <HBox fx:id="serviceButtons" alignment="CENTER" prefHeight="39.0" prefWidth="396.0" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="6"/>
+                    <HBox fx:id="serviceButtons" alignment="CENTER" prefHeight="39.0" prefWidth="396.0" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="6" />
                     <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Columna" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                     <TextField fx:id="columna" maxHeight="1.7976931348623157E308" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
                     <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Marcador" GridPane.columnIndex="0" GridPane.rowIndex="3" />
                     <ChoiceBox fx:id="lstMarcadorIn" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                    <HBox fx:id="addServiceButtons" alignment="CENTER" prefHeight="39.0" prefWidth="396.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3"/>
+                    <HBox fx:id="addServiceButtons" alignment="CENTER" prefHeight="39.0" prefWidth="396.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
                     <Label fx:id="totalServicio" alignment="CENTER_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Total: 0" GridPane.columnIndex="3" GridPane.rowIndex="6">
                       <GridPane.margin>
                         <Insets right="10.0" fx:id="x1" />
@@ -174,7 +185,7 @@
                     <ChoiceBox fx:id="campo" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                     <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Marcador" GridPane.columnIndex="2" GridPane.rowIndex="1" />
                     <ChoiceBox fx:id="marcador" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-                    <HBox fx:id="associacionButtons" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"  GridPane.columnIndex="4" GridPane.rowIndex="1" />
+                    <HBox fx:id="associacionButtons" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="4" GridPane.rowIndex="1" />
                     <TableView fx:id="lstMarcadoresCampos" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onMouseClicked="#servicioMarcador" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="0" GridPane.columnSpan="5" GridPane.rowIndex="2">
                       <columns>
                         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="236.0" text="Servicio">
@@ -194,7 +205,7 @@
                         </TableColumn>
                       </columns>
                     </TableView>
-                    <HBox fx:id="associacion2Buttons" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="0" GridPane.columnSpan="5" GridPane.halignment="CENTER" GridPane.rowIndex="5"/>
+                    <HBox fx:id="associacion2Buttons" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="0" GridPane.columnSpan="5" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
                     <HBox fx:id="paginatorAsociar" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="0" GridPane.columnSpan="5" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
                     <Label fx:id="totalAsociar" alignment="CENTER_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Total: 0" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="3">
                       <GridPane.margin>
@@ -234,7 +245,7 @@
                     <Font size="15.0" />
                   </font>
                 </Label>
-                <HBox fx:id="configButtons" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+                <HBox fx:id="configButtons" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnSpan="4" GridPane.rowIndex="5" />
                 <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="64.0" prefWidth="210.0" text="Nombre Configuración" GridPane.columnIndex="0" GridPane.rowIndex="1" />
                 <Label fx:id="lNameFilerOut" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Nombre Archivo Salida" GridPane.columnIndex="0" GridPane.rowIndex="4" />
                 <TextField fx:id="nameFilerOut" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="32.0" prefWidth="398.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="4" />
