--- a/ea-contabilidad/ea-app/src/main/resources/view/dinamico/documento.fxml
+++ b/ea-contabilidad/ea-app/src/main/resources/view/dinamico/documento.fxml
@@ -16,18 +16,18 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxWidth="1.7976931348623157E308" prefHeight="740.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.com.japl.ea.app.beans.dinamico.FormularioBean">
+<BorderPane maxWidth="1.7976931348623157E308" prefHeight="802.0" prefWidth="574.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.com.japl.ea.app.beans.dinamico.FormularioBean">
   <bottom>
-    <HBox fx:id="buttons" alignment="CENTER" maxHeight="1.7976931348623157E308" minHeight="16.0" prefHeight="36.0" prefWidth="554.0" />
+    <HBox fx:id="buttons" alignment="CENTER" maxHeight="1.7976931348623157E308" minHeight="16.0" prefHeight="35.0" prefWidth="554.0" />
   </bottom>
   <center>
     <GridPane alignment="CENTER" hgap="5.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" vgap="5.0">
       <children>
         <Label maxWidth="1.7976931348623157E308" text="Tipo de Documento" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-        <ChoiceBox fx:id="tipoDocumento" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+        <ChoiceBox fx:id="tipoDocumento" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" />
         <Label alignment="CENTER" maxWidth="1.7976931348623157E308" text="Controlar" GridPane.columnIndex="2" GridPane.rowIndex="0" />
         <ChoiceBox fx:id="controlar" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="3" GridPane.rowIndex="0" />
-        <TableView fx:id="tabla" maxWidth="1.7976931348623157E308" prefHeight="300.0" GridPane.columnIndex="0" GridPane.columnSpan="4" GridPane.rowIndex="1">
+        <TableView fx:id="tabla" maxWidth="1.7976931348623157E308" prefHeight="300.0" GridPane.columnIndex="0" GridPane.columnSpan="4" GridPane.rowIndex="2">
           <columns>
           <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="125.0" text="%fxml.table.column.position">
               <cellValueFactory>
@@ -81,8 +81,8 @@
             </TableColumn>
           </columns>
         </TableView>
-        <HBox fx:id="paginator" prefHeight="31.0" prefWidth="500.0" GridPane.columnIndex="0" GridPane.columnSpan="4" GridPane.rowIndex="2" />
-        <GridPane fx:id="row6" hgap="5.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="208.0" vgap="5.0" GridPane.columnIndex="0" GridPane.columnSpan="4" GridPane.rowIndex="3">
+        <HBox fx:id="paginator" prefHeight="31.0" prefWidth="500.0" GridPane.columnIndex="0" GridPane.columnSpan="4" GridPane.rowIndex="3" />
+        <GridPane fx:id="row6" hgap="5.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="208.0" vgap="5.0" GridPane.columnIndex="0" GridPane.columnSpan="4" GridPane.rowIndex="4">
           <children>
             <Label fx:id="lNombreCampo" alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Nombre Campo" GridPane.columnIndex="0" GridPane.rowIndex="1">
               <GridPane.margin>
@@ -159,6 +159,9 @@
             <RowConstraints maxHeight="83.0" prefHeight="31.0" />
           </rowConstraints>
         </GridPane>
+            <Label fx:id="labelCopyTo" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="%fxml.lbl.copy.to" GridPane.rowIndex="1" />
+            <ChoiceBox fx:id="selectToCopy" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Button fx:id="btnCopy" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#clearItem" text="%fxml.btn.copy" GridPane.columnIndex="2" GridPane.rowIndex="1" />
       </children>
       <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="10.0" prefWidth="132.0" />
@@ -168,9 +171,10 @@
       </columnConstraints>
       <rowConstraints>
         <RowConstraints maxHeight="255.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="401.0" minHeight="10.0" prefHeight="382.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="261.0" minHeight="10.0" prefHeight="21.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="261.0" minHeight="10.0" prefHeight="214.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="255.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="401.0" minHeight="10.0" prefHeight="347.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="261.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="261.0" minHeight="10.0" prefHeight="256.0" vgrow="SOMETIMES" />
       </rowConstraints>
     </GridPane>
   </center>
