--- a/ea-contabilidad/ea-app/src/main/resources/view/dinamico/documento.fxml
+++ b/ea-contabilidad/ea-app/src/main/resources/view/dinamico/documento.fxml
@@ -121,7 +121,7 @@
             <Label fx:id="etiqueta" alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Etiqueta" GridPane.columnIndex="2" GridPane.margin="$x1" GridPane.rowIndex="1" />
             <TextField fx:id="fieldLabel" maxHeight="1.7976931348623157E308" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
             <CheckBox fx:id="fieldFilter" alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Filtro" GridPane.columnIndex="0" GridPane.columnSpan="1" GridPane.halignment="CENTER" GridPane.margin="$x1" GridPane.rowIndex="6" />
-            <CheckBox fx:id="fieldColumn" alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Columna" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.margin="$x1" GridPane.rowIndex="6" />
+            <CheckBox fx:id="fieldColumn" alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Columna" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.margin="$x1" GridPane.rowIndex="6" />
             <CheckBox fx:id="fieldHasDefaultValue" alignment="CENTER_LEFT" contentDisplay="CENTER" disable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#manejaDefault" text="Tiene defecto" visible="true" GridPane.columnIndex="0" GridPane.rowIndex="7">
               <GridPane.margin>
                 <Insets left="10.0" fx:id="x1" />
@@ -140,6 +140,8 @@
                         <Insets left="30.0" right="30.0" />
                      </GridPane.margin>
                   </TextField>
+                  <TextField fx:id="fieldFormat" GridPane.columnIndex="3" GridPane.rowIndex="6" />
+                  <Label fx:id="lblFormat" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="%fxml.lbl.format" GridPane.columnIndex="2" GridPane.rowIndex="6" />
           </children>
           <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="122.0" minWidth="10.0" prefWidth="122.0" />
