--- a/ea-contabilidad/ea-app/src/main/resources/view/dinamico/listaDocumentos.fxml
+++ b/ea-contabilidad/ea-app/src/main/resources/view/dinamico/listaDocumentos.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.control.cell.*?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
+<?import co.com.japl.ea.app.custom.ResponsiveGridPane?>
 
 
 <BorderPane prefHeight="509.0" prefWidth="482.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2"
@@ -30,7 +31,7 @@
 						<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
 					</rowConstraints>
 				</GridPane>
-				<GridPane fx:id="filterTable"/>
+				<ResponsiveGridPane fx:id="filterTable"/>
 				<TableView fx:id="tabla" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="312.0" prefWidth="482.0"/>
 				<HBox fx:id="paginador" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="35.0" prefWidth="301.0" />
 			</children>
