--- a/ea-contabilidad/ea-app/src/main/resources/view/dinamico/listDetalleContable.fxml
+++ b/ea-contabilidad/ea-app/src/main/resources/view/dinamico/listDetalleContable.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
+<?import co.com.japl.ea.app.custom.ResponsiveGridPane?>
 
 <BorderPane prefHeight="478.0" prefWidth="553.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="co.com.japl.ea.app.beans.dinamico.ListaDetalleContableBean">
   <!-- TODO Add Nodes -->
@@ -39,16 +40,6 @@
     </VBox>
   </center>
   <top>
-    <GridPane fx:id="filterTable" alignment="CENTER" maxWidth="1.7976931348623157E308" BorderPane.margin="$x1">
-      <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-      </columnConstraints>
-      <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      </rowConstraints>
-    </GridPane>
+    <ResponsiveGridPane fx:id="filterTable" alignment="CENTER" maxWidth="1.7976931348623157E308" />
   </top>
 </BorderPane>
