--- a/ea-contabilidad/ea-app/src/main/resources/view/Template.fxml
+++ b/ea-contabilidad/ea-app/src/main/resources/view/Template.fxml
@@ -71,7 +71,7 @@
                </padding></HBox>
                </top>
                <center>
-             	<ScrollPane fx:id="scroller" fitToWidth="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="776.0" prefWidth="914.0" BorderPane.alignment="CENTER">
+             	<ScrollPane fx:id="scroller" fitToWidth="true" prefHeight="776.0" BorderPane.alignment="CENTER">
       		 <content>
       		   <VBox fx:id="principal" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-background-color: red;" />
                </content>
