--- a/ea-contabilidad/ea-app/src/main/resources/view/component/popup.fxml
+++ b/ea-contabilidad/ea-app/src/main/resources/view/component/popup.fxml
@@ -20,7 +20,7 @@
     </HBox>
   </bottom>
   <center>
-    <TextArea fx:id="mensaje" disable="false" editable="false" opacity="1.0" prefWidth="200.0" style="-fx-background-color: transparent;" text="mensaje" wrapText="true" />
+    <Label fx:id="mensaje"  text="mensaje" wrapText="true"   maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" />
   </center>
   <left>
     <ImageView fx:id="imagen" fitHeight="99.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" x="0.0" />
